Add absolute paths on tsconfig, rename persistance folder to Models, validations moved to Controllers

--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "Proyecto Final Coderhouse Backend - eCommerce",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon -L ./src/index.ts",
-    "start": "npx tsc && node ./build/index.js",
+    "dev": "NODE_PATH=./src nodemon -L ./src/index.ts",
+    "start": "NODE_PATH=./ npx tsc && node ./build/index.js",
     "build": "npx tsc",
     "lint": "eslint . --ext .ts",
     "prettier": "prettier --config .prettierrc 'src/**/*.ts' --write",
