--- a/package.json
+++ b/package.json
@@ -4,20 +4,31 @@
   "description": "Proyecto Final Coderhouse Backend - eCommerce",
   "main": "index.js",
   "scripts": {
-    "dev": "NODE_PATH=./src nodemon -L ./src/index.ts",
-    "start": "NODE_PATH=./ npx tsc && node ./build/index.js",
+    "dev": "nodemon -L -r tsconfig-paths/register ./src/index.ts",
+    "start": "npx tsc && tspath -f && node ./build/src/index.js",
     "build": "npx tsc",
     "lint": "eslint . --ext .ts",
     "prettier": "prettier --config .prettierrc 'src/**/*.ts' --write",
+    "migrate:db": "npx knex migrate:latest --env development",
+    "rollback:db": "npx knex migrate:rollback --env development",
+    "seed:db": "npx knex seed:run --env development",
+    "init:db": "npm run rollback:db && npm run migrate:db && npm run seed:db",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Lucas Caniggia",
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
+    "cross-env": "^7.0.3",
     "express": "^4.17.1",
+    "knex": "^0.95.10",
     "moment": "^2.29.1",
+    "mongoose": "^6.0.5",
+    "mysql": "^2.18.1",
     "socket.io": "^4.1.3",
+    "sqlite3": "^5.0.2",
+    "tsconfig-paths": "^3.11.0",
+    "tspath": "^1.3.7",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
