--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "cross-env": "^7.0.3",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "express-async-handler": "^1.1.4",
     "firebase-admin": "^9.11.1",
     "knex": "^0.95.10",
     "moment": "^2.29.1",
