Add Products & Cart model for Memory persistance, and add to Factory. Add queries for all prodct models. Refactor: deleted unused /services files. Update config and run prettier-eslint

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -19,13 +19,12 @@
         "prettier"
     ],
     "rules": {
-        "semi": [
-            "error",
-            "always"
-        ],
-        "quotes": [
-            "error",
-            "single"
+        "prettier/prettier": ["error",
+            {
+                "trailingComma": "all",
+                "arrowParens": "avoid",
+                "endOfLine": "auto"
+            }
         ]
     }
 }
