--- a/package.json
+++ b/package.json
@@ -18,11 +18,13 @@
   "author": "Lucas Caniggia",
   "license": "ISC",
   "dependencies": {
+    "@types/faker": "^5.5.8",
     "cors": "^2.8.5",
     "cross-env": "^7.0.3",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "express-async-handler": "^1.1.4",
+    "faker": "^5.5.3",
     "firebase-admin": "^9.11.1",
     "knex": "^0.95.10",
     "moment": "^2.29.1",
