--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   "author": "Lucas Caniggia",
   "license": "ISC",
   "dependencies": {
-    "@types/faker": "^5.5.8",
+    "bcrypt": "^5.0.1",
     "connect-mongo": "^4.6.0",
     "cors": "^2.8.5",
     "cross-env": "^7.0.3",
@@ -26,13 +26,13 @@
     "express": "^4.17.1",
     "express-async-handler": "^1.1.4",
     "express-session": "^1.17.2",
-    "faker": "^5.5.3",
     "firebase-admin": "^9.11.1",
     "knex": "^0.95.10",
     "moment": "^2.29.1",
     "mongoose": "^6.0.5",
     "mysql": "^2.18.1",
-    "normalizr": "^3.6.1",
+    "passport": "^0.5.0",
+    "passport-local": "^1.0.0",
     "socket.io": "^4.1.3",
     "sqlite3": "^5.0.2",
     "tsconfig-paths": "^3.11.0",
@@ -40,9 +40,12 @@
     "uuid": "^8.3.2"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.13",
     "@types/express-session": "^1.17.4",
     "@types/node": "^16.7.1",
+    "@types/passport": "^1.0.7",
+    "@types/passport-local": "^1.0.34",
     "@types/uuid": "^8.3.1",
     "@typescript-eslint/eslint-plugin": "^4.29.3",
     "@typescript-eslint/parser": "^4.29.3",
