--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "mongoose": "^6.0.5",
     "mysql": "^2.18.1",
     "passport": "^0.5.0",
+    "passport-facebook": "^3.0.0",
     "passport-local": "^1.0.0",
     "socket.io": "^4.1.3",
     "sqlite3": "^5.0.2",
@@ -45,6 +46,7 @@
     "@types/express-session": "^1.17.4",
     "@types/node": "^16.7.1",
     "@types/passport": "^1.0.7",
+    "@types/passport-facebook": "^2.1.11",
     "@types/passport-local": "^1.0.34",
     "@types/uuid": "^8.3.1",
     "@typescript-eslint/eslint-plugin": "^4.29.3",
