--- a/package.json
+++ b/package.json
@@ -5,8 +5,11 @@
   "main": "index.js",
   "scripts": {
     "dev": "nodemon -L -r tsconfig-paths/register ./src/index.ts",
-    "start": "npx tsc && tspath -f && node ./build/src/index.js",
-    "build": "npx tsc",
+    "start": "npm run build && node ./build/src/index.js",
+    "build": "ttsc -P ./tsconfig.json",
+    "prod": "npm run build && node_modules/.bin/forever -w start ./build/src/index.js",
+    "prod:pm2:fork": "npm run build && node_modules/.bin/pm2 start ecosystem.config.js --only app-fork",
+    "prod:pm2:cluster": "npm run build && node_modules/.bin/pm2 start ecosystem.config.js --only app-cluster",
     "lint": "eslint . --ext .ts",
     "prettier": "prettier --config .prettierrc 'src/**/*.ts' --write",
     "migrate:db": "npx knex migrate:latest --env development",
@@ -28,6 +31,7 @@
     "express-async-handler": "^1.1.4",
     "express-session": "^1.17.2",
     "firebase-admin": "^9.11.1",
+    "forever": "^4.0.1",
     "knex": "^0.95.10",
     "moment": "^2.29.1",
     "mongoose": "^6.0.5",
@@ -35,6 +39,7 @@
     "passport": "^0.5.0",
     "passport-facebook": "^3.0.0",
     "passport-local": "^1.0.0",
+    "pm2": "^5.1.2",
     "socket.io": "^4.1.3",
     "sqlite3": "^5.0.2",
     "tsconfig-paths": "^3.11.0",
@@ -53,12 +58,14 @@
     "@types/uuid": "^8.3.1",
     "@typescript-eslint/eslint-plugin": "^4.29.3",
     "@typescript-eslint/parser": "^4.29.3",
+    "@zerollup/ts-transform-paths": "^1.7.18",
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^3.4.1",
     "nodemon": "^2.0.12",
     "prettier": "^2.3.2",
     "ts-node": "^10.2.1",
+    "ttypescript": "^1.5.12",
     "typescript": "^4.3.5"
   }
 }
