--- a/package.json
+++ b/package.json
@@ -16,14 +16,14 @@
     "migrate:db": "npx knex migrate:latest --env development",
     "rollback:db": "npx knex migrate:rollback --env development",
     "seed:db": "npx knex seed:run --env development",
-    "init:db": "npm run rollback:db && npm run migrate:db && npm run seed:db",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "init:db": "npm run rollback:db && npm run migrate:db && npm run seed:db"
   },
   "author": "Lucas Caniggia",
   "license": "ISC",
   "dependencies": {
     "args": "^5.0.1",
     "bcrypt": "^5.0.1",
+    "compression": "^1.7.4",
     "connect-mongo": "^4.6.0",
     "cors": "^2.8.5",
     "cross-env": "^7.0.3",
@@ -45,11 +45,13 @@
     "sqlite3": "^5.0.2",
     "tsconfig-paths": "^3.11.0",
     "tspath": "^1.3.7",
-    "uuid": "^8.3.2"
+    "uuid": "^8.3.2",
+    "winston": "^3.3.3"
   },
   "devDependencies": {
     "@types/args": "^5.0.0",
     "@types/bcrypt": "^5.0.0",
+    "@types/compression": "^1.7.2",
     "@types/express": "^4.17.13",
     "@types/express-session": "^1.17.4",
     "@types/node": "^16.7.1",
@@ -57,6 +59,7 @@
     "@types/passport-facebook": "^2.1.11",
     "@types/passport-local": "^1.0.34",
     "@types/uuid": "^8.3.1",
+    "@types/winston": "^2.4.4",
     "@typescript-eslint/eslint-plugin": "^4.29.3",
     "@typescript-eslint/parser": "^4.29.3",
     "@zerollup/ts-transform-paths": "^1.7.18",
