--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "nodemon -L -r tsconfig-paths/register ./src/index.ts",
-    "start": "npm run build && node ./build/src/index.js",
+    "start": "npm run build && node ./build/src/index.js --cluster",
     "build": "ttsc -P ./tsconfig.json",
     "prod": "npm run build && node_modules/.bin/forever -w start ./build/src/index.js",
     "prod:pm2": "npm run build && node_modules/.bin/pm2 start ecosystem.config.js",
@@ -45,6 +45,7 @@
     "sqlite3": "^5.0.2",
     "tsconfig-paths": "^3.11.0",
     "tspath": "^1.3.7",
+    "ttypescript": "^1.5.12",
     "uuid": "^8.3.2",
     "winston": "^3.3.3"
   },
@@ -69,7 +70,6 @@
     "nodemon": "^2.0.12",
     "prettier": "^2.3.2",
     "ts-node": "^10.2.1",
-    "ttypescript": "^1.5.12",
     "typescript": "^4.3.5"
   }
 }
