--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "main": "index.js",
   "scripts": {
     "dev": "nodemon -L -r tsconfig-paths/register ./src/index.ts",
-    "start": "npm run build && node ./build/src/index.js --cluster",
+    "start": "node ./build/src/index.js",
     "build": "ttsc -P ./tsconfig.json",
+    "build:start": "npm run build && npm run start",
     "prod": "npm run build && node_modules/.bin/forever -w start ./build/src/index.js",
     "prod:pm2": "npm run build && node_modules/.bin/pm2 start ecosystem.config.js",
     "prod:pm2:fork": "npm run build && node_modules/.bin/pm2 start ecosystem.config.js --only app-fork",
@@ -36,6 +37,8 @@
     "knex": "^0.95.10",
     "moment": "^2.29.1",
     "mongoose": "^6.0.5",
+    "mongoose-unique-validator": "^3.0.0",
+    "multer": "^1.4.3",
     "mysql": "^2.18.1",
     "passport": "^0.5.0",
     "passport-facebook": "^3.0.0",
@@ -45,7 +48,6 @@
     "sqlite3": "^5.0.2",
     "tsconfig-paths": "^3.11.0",
     "tspath": "^1.3.7",
-    "ttypescript": "^1.5.12",
     "uuid": "^8.3.2",
     "winston": "^3.3.3"
   },
@@ -55,6 +57,8 @@
     "@types/compression": "^1.7.2",
     "@types/express": "^4.17.13",
     "@types/express-session": "^1.17.4",
+    "@types/mongoose-unique-validator": "^1.0.5",
+    "@types/multer": "^1.4.7",
     "@types/node": "^16.7.1",
     "@types/passport": "^1.0.7",
     "@types/passport-facebook": "^2.1.11",
