--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "sqlite3": "^5.0.2",
     "tsconfig-paths": "^3.11.0",
     "tspath": "^1.3.7",
+    "ttypescript": "^1.5.12",
     "uuid": "^8.3.2",
     "winston": "^3.3.3"
   },
