--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "mongoose-unique-validator": "^3.0.0",
     "multer": "^1.4.3",
     "mysql": "^2.18.1",
+    "nodemailer": "^6.7.0",
     "passport": "^0.5.0",
     "passport-facebook": "^3.0.0",
     "passport-local": "^1.0.0",
@@ -48,6 +49,7 @@
     "sqlite3": "^5.0.2",
     "tsconfig-paths": "^3.11.0",
     "tspath": "^1.3.7",
+    "twilio": "^3.71.1",
     "uuid": "^8.3.2",
     "winston": "^3.3.3"
   },
@@ -60,6 +62,7 @@
     "@types/mongoose-unique-validator": "^1.0.5",
     "@types/multer": "^1.4.7",
     "@types/node": "^16.7.1",
+    "@types/nodemailer": "^6.4.4",
     "@types/passport": "^1.0.7",
     "@types/passport-facebook": "^2.1.11",
     "@types/passport-local": "^1.0.34",
