Add Joi validation on signUp

--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "firebase-admin": "^9.11.1",
     "forever": "^4.0.1",
     "helmet": "^4.6.0",
+    "joi": "^17.4.2",
     "knex": "^0.95.10",
     "moment": "^2.29.1",
     "mongoose": "^6.0.5",
