--- a/artillery/ecommerce-test.yml
+++ b/artillery/ecommerce-test.yml
@@ -10,7 +10,7 @@ config:
       - 'email'
       - 'password'
 scenarios:
-  - name: 'Log in and proceed to Product's page'
+  - name: 'Log in and proceed to Products page'
     flow:
       - post:
           url: '/api/auth/login'
