--- a/package.json
+++ b/package.json
@@ -33,9 +33,11 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "express-async-handler": "^1.1.4",
+    "express-graphql": "^0.12.0",
     "express-session": "^1.17.2",
     "firebase-admin": "^9.11.1",
     "forever": "^4.0.1",
+    "graphql": "^16.0.1",
     "helmet": "^4.6.0",
     "joi": "^17.4.2",
     "knex": "^0.95.10",
