--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "pm2": "^5.1.2",
     "socket.io": "^4.1.3",
     "sqlite3": "^5.0.2",
+    "swagger-ui-express": "^4.1.6",
     "tsconfig-paths": "^3.11.0",
     "tspath": "^1.3.7",
     "twilio": "^3.71.1",
@@ -72,6 +73,7 @@
     "@types/passport": "^1.0.7",
     "@types/passport-facebook": "^2.1.11",
     "@types/passport-local": "^1.0.34",
+    "@types/swagger-ui-express": "^4.1.3",
     "@types/uuid": "^8.3.1",
     "@types/winston": "^2.4.4",
     "@typescript-eslint/eslint-plugin": "^4.29.3",
