--- a/artillery/ecommerce-test.yml
+++ b/artillery/ecommerce-test.yml
@@ -18,4 +18,4 @@ scenarios:
             email: '{{ email }}'
             password: '{{ password }}'
       - get:
-          url: '/api/products/list'
+          url: '/api/products'
