Add basic config for Jest-Supertest, add tests for all product's routes. Add testing for possible errors. Comment Twilio's feat for it's not needed right now.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -76,6 +76,11 @@
       }
     ],
   },
+  "ts-node": {
+    "moduleTypes": {
+      "jest.config.ts": "cjs"
+    }
+  },
   "exclude": [
     "node_modules",
     "dist",
