--- a/package.json
+++ b/package.json
@@ -18,60 +18,57 @@
     "rollback:db": "npx knex migrate:rollback --env development",
     "seed:db": "npx knex seed:run --env development",
     "init:db": "npm run rollback:db && npm run migrate:db && npm run seed:db",
-    "artillery": "artillery run artillery/ecommerce-test.yml"
+    "artillery": "artillery run artillery/ecommerce-test.yml",
+    "test": "NODE_ENV=test jest",
+    "test:watch": "NODE_ENV=test jest --watch"
   },
   "author": "Lucas Caniggia",
   "license": "ISC",
   "dependencies": {
-    "args": "^5.0.1",
-    "artillery": "^2.0.0-4",
+    "@types/jest": "^26.0.23",
+    "@types/supertest": "^2.0.11",
     "bcrypt": "^5.0.1",
-    "compression": "^1.7.4",
     "connect-mongo": "^4.6.0",
     "cors": "^2.8.5",
     "cross-env": "^7.0.3",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "express-async-handler": "^1.1.4",
-    "express-graphql": "^0.12.0",
     "express-session": "^1.17.2",
     "firebase-admin": "^9.11.1",
-    "forever": "^4.0.1",
-    "graphql": "^16.0.1",
     "helmet": "^4.6.0",
+    "jest": "^27.0.4",
     "joi": "^17.4.2",
     "knex": "^0.95.10",
     "moment": "^2.29.1",
-    "mongoose": "^6.0.5",
+    "mongodb": "^4.1.1",
+    "mongodb-memory-server": "^8.0.2",
+    "mongoose": "^6.0.6",
     "mongoose-unique-validator": "^3.0.0",
     "multer": "^1.4.3",
     "mysql": "^2.18.1",
     "nodemailer": "^6.7.0",
     "passport": "^0.5.0",
-    "passport-facebook": "^3.0.0",
     "passport-local": "^1.0.0",
-    "pm2": "^5.1.2",
     "socket.io": "^4.1.3",
     "sqlite3": "^5.0.2",
+    "supertest": "^6.1.6",
     "swagger-ui-express": "^4.1.6",
+    "ts-jest": "^27.0.7",
     "tsconfig-paths": "^3.11.0",
-    "tspath": "^1.3.7",
     "twilio": "^3.71.1",
     "uuid": "^8.3.2",
     "winston": "^3.3.3"
   },
   "devDependencies": {
-    "@types/args": "^5.0.0",
     "@types/bcrypt": "^5.0.0",
-    "@types/compression": "^1.7.2",
     "@types/express": "^4.17.13",
     "@types/express-session": "^1.17.4",
     "@types/mongoose-unique-validator": "^1.0.5",
     "@types/multer": "^1.4.7",
-    "@types/node": "^16.7.1",
+    "@types/node": "^15.12.1",
     "@types/nodemailer": "^6.4.4",
     "@types/passport": "^1.0.7",
-    "@types/passport-facebook": "^2.1.11",
     "@types/passport-local": "^1.0.34",
     "@types/swagger-ui-express": "^4.1.3",
     "@types/uuid": "^8.3.1",
@@ -84,7 +81,7 @@
     "eslint-plugin-prettier": "^3.4.1",
     "nodemon": "^2.0.12",
     "prettier": "^2.3.2",
-    "ts-node": "^10.2.1",
+    "ts-node": "^10.1.0",
     "ttypescript": "^1.5.12",
     "typescript": "^4.3.5"
   }
