--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "Proyecto Final Coderhouse Backend - eCommerce",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon -L -r tsconfig-paths/register ./src/index.ts",
-    "start": "node ./build/src/index.js",
+    "dev": "NODE_ENV=development nodemon -L -r tsconfig-paths/register ./src/index.ts",
+    "start": "NODE_ENV=production node ./build/src/index.js",
     "build": "ttsc -P ./tsconfig.json",
     "build:start": "npm run build && npm run start",
     "prod": "npm run build && node_modules/.bin/forever -w start ./build/src/index.js",
@@ -40,6 +40,7 @@
     "jest": "^27.0.4",
     "joi": "^17.4.2",
     "knex": "^0.95.10",
+    "minimist": "^1.2.5",
     "moment": "^2.29.1",
     "mongodb": "^4.1.1",
     "mongodb-memory-server": "^8.0.2",
@@ -64,6 +65,7 @@
     "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.13",
     "@types/express-session": "^1.17.4",
+    "@types/minimist": "^1.2.2",
     "@types/mongoose-unique-validator": "^1.0.5",
     "@types/multer": "^1.4.7",
     "@types/node": "^15.12.1",
