--- a/package.json
+++ b/package.json
@@ -34,8 +34,10 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "express-async-handler": "^1.1.4",
+    "express-graphql": "^0.12.0",
     "express-session": "^1.17.2",
     "firebase-admin": "^9.11.1",
+    "graphql": "^16.0.1",
     "helmet": "^4.6.0",
     "jest": "^27.0.4",
     "joi": "^17.4.2",
