--- a/package.json
+++ b/package.json
@@ -25,15 +25,18 @@
   "author": "Lucas Caniggia",
   "license": "ISC",
   "dependencies": {
+    "@types/express-fileupload": "^1.2.1",
     "@types/jest": "^26.0.23",
     "@types/supertest": "^2.0.11",
     "bcrypt": "^5.0.1",
+    "cloudinary": "^1.28.0",
     "connect-mongo": "^4.6.0",
     "cors": "^2.8.5",
     "cross-env": "^7.0.3",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "express-async-handler": "^1.1.4",
+    "express-fileupload": "^1.2.1",
     "express-graphql": "^0.12.0",
     "express-session": "^1.17.2",
     "firebase-admin": "^9.11.1",
