--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "nodemailer": "^6.7.0",
     "passport": "^0.5.0",
     "passport-local": "^1.0.0",
+    "pug": "^3.0.2",
     "socket.io": "^4.1.3",
     "sqlite3": "^5.0.2",
     "supertest": "^6.1.6",
